RAIN-2245 : Bill Amend Ui Alignment issue fixes

--- a/web/rainmaker/dev-packages/egov-billamend-dev/src/ui-config/screens/specs/bill-amend/index.scss
+++ b/web/rainmaker/dev-packages/egov-billamend-dev/src/ui-config/screens/specs/bill-amend/index.scss
@@ -25,3 +25,8 @@
 #material-ui-billamdSubheader1{
   width: 100% !important;
 }
+
+.bill-estimate-infotext{
+  position: relative;
+  left: 10%;
+}
